--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -24,14 +24,17 @@
                     <h1 class="mb-3">TopG Car Rental</h1>
                     <h5 class="mb-4" th:text="${'Welcome back, ' + user.name + ' ' + user.surname + '!'}"></h5>
 
-                    <ul class="list-group list-group-horizontal" th:each="car : ${carLot.cars}">
-                        <li class="list-group-item flex-fill list-group-item-dark" th:text="${car.brand}">Brand</li>
-                        <li class="list-group-item flex-fill list-group-item-dark" th:text="${car.model}">Model</li>
-                        <li class="list-group-item flex-fill list-group-item-dark" th:text="${car.horsepower}">Horsepower</li>
-                        <li class="list-group-item flex-fill list-group-item-dark" th:text="${car.year}">Year</li>
-                    </ul>
+                    <a
+                            class="btn btn-outline-light btn-lg m-2"
+                            th:href="@{/orders}"
+                    >My orders</a>
 
+                    <a
+                            class="btn btn-outline-light btn-lg m-2"
+                            th:href="@{/cars}"
+                    >Available cars</a>
 
+                    <h1 class="mb-3"></h1> <!-- Space -->
 
                 </div>
             </div>
