--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
     <!-- Background image -->
     <div
             class="p-5 text-center bg-image"
-            style="background-image: url('/gtr.jpg'); height: 1000px;"
+            style="background-image: url('/background/background.jpg'); height: 1000px;"
     >
         <div class="mask" style="background-color: rgba(0,0,0,0.7);">
             <div class="d-flex justify-content-center align-items-center h-100">
