--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,15 @@
 
 <html lang="en">
 <head>
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
             crossorigin="anonymous"></script>
     <title>TopG Car Rental</title>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/static/styles.css" th:href="@{/styles.css}"/>
 </head>
 <body>
 
@@ -21,18 +24,22 @@
         <div class="mask" style="background-color: rgba(0,0,0,0.7);">
             <div class="d-flex justify-content-center align-items-center h-100">
                 <div class="text-white">
-                    <h1 class="mb-3">TopG Car Rental</h1>
-                    <h5 class="mb-4">What color is your Mercedes?</h5>
+                    <h1 class="main-1">TopG Car Rental</h1>
+                    <h5 class="main-2">What color is your Mercedes?</h5>
+
                     <a
                             class="btn btn-outline-light btn-lg m-2"
                             th:href="@{/login}"
                             id="login"
                     >Log In</a>
+
                     <a
                             class="btn btn-outline-light btn-lg m-2"
                             href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
                     >Sign Up</a>
-                    <h1 class="mb-3"></h1> <!-- Space -->
+
+                    <!-- Space -->
+                    <h1></h1>
                 </div>
             </div>
         </div>
