--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,30 +2,15 @@
 
 <html lang="en">
 <head>
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
             crossorigin="anonymous"></script>
     <title>TopG Car Rental</title>
-    <style>
-        button {
-            background-color: #ddd;
-            border: none;
-            color: black;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            margin: 4px 2px;
-            cursor: pointer;
-            border-radius: 15px;
-        }
-
-        button:hover {
-            background-color: #f1f1f1;
-        }
-    </style>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/static/styles.css" th:href="@{/styles.css}"/>
 </head>
 <body>
 
@@ -38,31 +23,24 @@
         <div class="mask" style="background-color: rgba(0,0,0,0.7);">
             <div class="d-flex justify-content-center align-items-center h-100">
                 <div class="text-white">
-                    <h1 class="mb-3">TopG Car Rental</h1>
+                    <h1 class="main-1" style="margin-bottom: 20px">TopG Car Rental</h1>
 
                     <!-- User information form -->
                     <form method="POST" th:object="${user}">
                         <!-- Login input -->
-                        <div class="form-group">
+                        <div class="form-group" style="margin-bottom: 15px">
                             <input type="text" th:field="*{login}" class="form-control" placeholder="Login">
                         </div>
 
-                        <!-- Space -->
-                        <h1 class="mb-3"></h1>
-
                         <!-- Password input -->
-                        <div class="form-group">
+                        <div class="form-group" style="margin-bottom: 15px;">
                             <input type="password" th:field="*{password}" class="form-control" placeholder="Password">
                         </div>
 
-                        <!-- Space -->
-                        <h1 class="mb-3"></h1>
-
                         <!-- Formatted login button -->
-                        <button>Log In</button>
+                        <button class="button-login" style="margin-bottom: 20px">Log In</button>
                     </form>
 
-                    <h1 class="mb-3"></h1> <!-- Space -->
                 </div>
             </div>
         </div>
