--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -2,17 +2,19 @@
 
 <html lang="en">
 <head>
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
             crossorigin="anonymous"></script>
     <title>TopG Car Rental</title>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/static/styles.css" th:href="@{/styles.css}"/>
 </head>
 <body style="background-color: black;">
 
 <header>
-    <!-- Background image -->
     <div class="p-5 text-center bg-image">
         <div class="mask">
             <div class="d-flex justify-content-center align-items-center h-100">
@@ -31,9 +33,14 @@
                                         Rental period: 2021-09-21 ~ 2022-12-23</p>
                                 </div>
 
+                                <!-- Horizontal line dividing image from car data -->
                                 <hr style="border-top: 2px solid white; opacity: 1">
 
-                                <img th:src="@{${'/images/' + car.carId + '.jpg'}}" class="card-img">
+                                <!-- Maybe placeholder in the future? -->
+                                <img class="card-img"
+                                     src="/static/background/background.jpg"
+                                     th:src="@{${'/images/' + car.carId + '.jpg'}}"
+                                >
 
                                 <a
                                         class="btn btn-outline-light btn-lg m-2"
@@ -47,7 +54,6 @@
             </div>
         </div>
     </div>
-    <!-- Background image -->
 </header>
 
 </body>
