--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -31,13 +31,13 @@
                     <!-- Cars rented by the user -->
                     <a
                             class="btn btn-outline-light btn-lg m-2"
-                            th:href="@{/orders}"
+                            th:href="@{dashboard/orders}"
                     >My orders</a>
 
                     <!-- Currently available cars to rent -->
                     <a
                             class="btn btn-outline-light btn-lg m-2"
-                            th:href="@{/cars}"
+                            th:href="@{dashboard/cars}"
                     >Available cars</a>
 
                     <!-- Space -->
