--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -15,12 +15,17 @@
 <body style="background-color: black;">
 
 <header>
-    <div class="p-5 text-center bg-image">
+    <div class="p-4 text-center bg-image">
         <div class="mask">
             <div class="d-flex justify-content-center align-items-center h-100">
                 <div class="text-white">
-                    <h1 class="mb-3">TopG Car Rental</h1>
-                    <h5 class="mb-4">Your current fleet:</h5>
+
+                    <div class="title-1">
+                        <img src="/static/background/logo.png" th:src="@{/background/logo.png}"
+                             style="background: transparent; width: 10%; height: auto;">
+                        <h1 style="margin-bottom: 5px;">TopG Car Rental</h1>
+                    </div>
+                    <h5>Your current fleet:</h5>
 
                     <div class="row">
                         <div class="col-sm-6" th:each="car : ${carLot.cars}">
@@ -36,7 +41,7 @@
                                 <!-- Horizontal line dividing image from car data -->
                                 <hr style="border-top: 2px solid white; opacity: 1">
 
-                                <!-- Maybe placeholder in the future? -->
+                                <!-- Maybe placeholder in the future (?) -->
                                 <img class="card-img"
                                      style="margin-bottom: 10px"
                                      src="/static/background/background.jpg"
