All necessary functionalities.

--- a/src/main/resources/templates/cars.html
+++ b/src/main/resources/templates/cars.html
@@ -134,7 +134,7 @@
                                                 style="box-sizing: border-box; width: 100%;"
                                                 onclick="this.parentNode.submit();"
                                                 th:text="${car.dayRate + '$/day'}">
-                                            >300$/day</a>
+                                            300$/day</a>
                                     </form>
 
                                     <!-- Week rate -->
@@ -146,7 +146,7 @@
                                                 style="box-sizing: border-box; width: 100%;"
                                                 onclick="this.parentNode.submit();"
                                                 th:text="${car.weekRate + '$/week'}">
-                                            >1500$/week</a>
+                                            1500$/week</a>
                                     </form>
 
                                     <!-- Month rate -->
@@ -158,7 +158,7 @@
                                                 style="box-sizing: border-box; width: 100%;"
                                                 onclick="this.parentNode.submit();"
                                                 th:text="${car.monthRate + '$/month'}">
-                                            >11000$/month</a>
+                                            11000$/month</a>
                                     </form>
                                 </div>
                             </div>
