Improve navigation with logo anchor

--- a/src/main/resources/templates/cars.html
+++ b/src/main/resources/templates/cars.html
@@ -22,8 +22,10 @@
 
                     <!-- Header div -->
                     <div class="title-1">
-                        <img src="/static/background/logo.png" th:src="@{/background/logo.png}"
-                             style="background: transparent; width: 10%; height: auto;" alt="...">
+                        <a title="Back to dashboard" href="../dashboard">
+                            <img src="/static/background/logo.png" th:src="@{/background/logo.png}"
+                                style="background: transparent; width: 10%; height: auto;" alt="...">
+                        </a>
                         <h1 style="margin-bottom: 5px;">TopG Car Rental</h1>
                     </div>
                     <h5>Available cars:</h5>
