--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -21,8 +21,10 @@
                 <div class="text-white">
 
                     <div class="title-1">
-                        <img src="/static/background/logo.png" th:src="@{/background/logo.png}"
-                             style="background: transparent; width: 10%; height: auto;">
+                        <a title="Back to dashboard" href="../dashboard">
+                            <img src="/static/background/logo.png" th:src="@{/background/logo.png}"
+                                 style="background: transparent; width: 10%; height: auto;">
+                        </a>
                         <h1 style="margin-bottom: 5px;">TopG Car Rental</h1>
                     </div>
                     <h5>Your current fleet:</h5>
