Add car specs to cards

--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -79,6 +79,7 @@
                                                 class="btn btn-outline-light btn-lg m-2"
                                                 style="box-sizing: border-box; width: 100%"
                                                 onclick="this.parentNode.submit();"
+                                                th:text="${'Extend (' + car.dayRate + '$/day)'}"
                                         >Extend</a>
                                     </form>
                                 </div>
