--- a/src/main/resources/templates/cars.html
+++ b/src/main/resources/templates/cars.html
@@ -103,6 +103,8 @@
                                    id="hpRange"
                                    oninput="hpOutput.value = 'MIN Horsepower: ' + hpRange.value" style="width: 25%;">
                         </div>
+
+                        <!--TODO: Set initial value of slider to max-->
                         <div class="row" style="justify-content: center; margin-top: 10px; margin-bottom: 20px;">
                             <output id="milOutput">MAX Mileage: -</output>
                             <input th:field="*{selectedMaxMileage}" type="range" class="form-range"
@@ -120,6 +122,8 @@
                                 <div class="card-body" style="padding-bottom: 0">
                                     <h2 class="card-title" th:text="${car.brand + ' ' + car.model}">Mercedes-Benz
                                         GTR</h2>
+                                    <h5 class="card-text" th:text="${car.category}">Supercar</h5>
+                                    <p class="card-text" th:text="${car.horsepower + 'HP, ' + car.year + ', ' + car.mileage + ' miles, ' + car.gearbox}">This will include car specs.</p>
                                 </div>
 
                                 <!-- Horizontal line dividing image from car data -->
