--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -37,6 +37,18 @@
                     </div>
                     <h5>Your current fleet:</h5>
 
+                    <div th:if="${alertData.type != 'none'}">
+                        <div class="alert alert-success alert-dismissible fade show" role="alert"
+                             style="width: 50%; margin-left: 25%">
+
+                        <span th:text="${alertData.message}">
+                            <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+                        </span>
+
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    </div>
+
                     <div class="row">
                         <div class="col-sm-6" th:each="car : ${carLot.cars}">
                             <div class="card" style="background-color: black;">
