Empty page display fix.

--- a/src/main/resources/templates/cars.html
+++ b/src/main/resources/templates/cars.html
@@ -18,7 +18,7 @@
     <div class="p-4 text-center bg-image">
         <div class="mask">
             <div class="d-flex justify-content-center align-items-center h-100">
-                <div class="text-white">
+                <div class="text-white" style="width: 100%">
                     <form class="button-logout" method="POST"
                           th:action="@{/dashboard/logout}">
                         <input type="hidden"/>
